manifests/event/event-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: rs-event
        image:  rs/event:latest
        ports:
          - name: http
            containerPort: 5100
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
      - name: rs-event-plugin
        image: rs/event-plugin:latest
        ports:
          - name: http
            containerPort: 50051
        resources:
          requests:
            cpu: 2000m
            memory: 4096Mi
          limits:
            cpu: 4000m
            memory: 8192Mi
        volumeMounts:
          - name: persistent-storage
            mountPath: /rs-data
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: efs-claim
