manifests/event/event-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event
spec: 
  type: ClusterIP
  selector:
    app: event
  ports:
  - name: http
    port: 5100
    targetPort: 5100
